--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
  },
  "private": true,
  "dependencies": {
-  "@angular/common": "^19.2.0",
-  "@angular/compiler": "^19.2.0",
-  "@angular/core": "^19.2.0",
-  "@angular/forms": "^19.2.0",
-  "@angular/platform-browser": "^19.2.0",
-  "@angular/platform-browser-dynamic": "^19.2.0",
-  "@angular/router": "^19.2.0",
+  "@angular/animations": "^19.2.4",
+  "@angular/common": "^19.2.4",
+  "@angular/compiler": "^19.2.4",
+  "@angular/core": "^19.2.4",
+  "@angular/forms": "^19.2.4",
+  "@angular/platform-browser": "^19.2.4",
+  "@angular/platform-browser-dynamic": "^19.2.4",
+  "@angular/router": "^19.2.4",
+  "@balaraju404/custom-components": "0.0.7",
   "rxjs": "~7.8.0",
   "tslib": "^2.3.0",
   "zone.js": "~0.15.0"
  },
  "devDependencies": {
-  "@angular-devkit/build-angular": "^19.2.0",
-  "@angular/cli": "^19.2.0",
-  "@angular/compiler-cli": "^19.2.0",
+  "@angular-devkit/build-angular": "^19.2.3",
+  "@angular/cli": "^19.2.3",
+  "@angular/compiler-cli": "^19.2.4",
   "@types/jasmine": "~5.1.0",
   "jasmine-core": "~5.6.0",
   "karma": "~6.4.0",
